# excel-rs

./: Cargo.toml  README.md
.github/: release-draft-rs.yml
.github/workflows/: cli.yml  release.yml  rs.yml
benchmarks/: test-py-excel-rs.py
cli-excel-rs/: Cargo.toml
cli-excel-rs/src/: main.rs
crates/excel-rs/: Cargo.toml  README.md
crates/excel-rs/src/: error.rs  format.rs  lib.rs  sheet.rs  workbook.rs
py-excel-rs/: Cargo.toml  pyproject.toml
py-excel-rs/py_excel_rs/: __init__.py  ffi.py
py-excel-rs/src/: celltype.rs  error.rs  lib.rs  workbook.rs
