[workspace]
members = ["cli-excel-rs", "crates/*", "py-excel-rs"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Carl Voller"]
edition = "2021"
homepage = "https://github.com/carlvoller/excel-rs"
license = "MIT"
repository = "https://github.com/carlvoller/excel-rs"

[workspace.dependencies]
excel-rs = { version = "1.0.0", path = "crates/excel-rs", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = false
debug-assertions = false