[package]
name = "cli-excel-rs"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
excel-rs = { workspace = true }
clap = { version = "4.5.17", features = ["derive"] }
csv = "1"
anyhow = "1"
