[package]
name = "py-excel-rs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "../README.md"
description = "python ffi for excel-rs"

[dependencies]
excel-rs = { workspace = true }
pyo3 = { version = "0.24", features = ["chrono", "extension-module", "py-clone"] }
numpy = "0.24"
chrono = "0.4.38"
csv = "1"

[lib]
name = "excel_rs"
crate-type = ["cdylib"]
