[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "py-excel-rs"
version = "1.0.0"
description = "Performant utility functions to convert common data structures to XLSX"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "py_excel_rs._excel_rs"