[package]
name = "excel-rs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
readme = "README.md"
description = "A fast, low-allocation Rust library for writing XLSX (Excel) files."
keywords = ["xlsx", "excel", "spreadsheet", "csv", "ooxml"]
categories = ["encoding", "parser-implementations"]

[dependencies]
zip = { version = "4.6.1", default-features = false, features = [
    "deflate-flate2",
    "deflate-flate2-zlib-rs",
] }
memchr = { version = "2", default-features = false }
